--- a/style.css
+++ b/style.css
@@ -845,7 +845,7 @@ textarea {
     background: #1bb3b0;
     background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
     width: 100%;
-    height: 102%;
+    max-height: 102000%;
 }
 
 .circles {
